# between-lines

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
apps/agent-list/: CLAUDE.md  README.md
apps/agent-list/frontend/: package.json  tailwind.config.ts  tsconfig.json
apps/agent-match/: CLAUDE.md  README.md  docker-compose.yml
apps/agent-match/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/agent-match/frontend/: package.json  tailwind.config.ts
apps/landing-page/: .env.example  CLAUDE.md  README.md  drizzle.config.ts  package-lock.json  package.json
apps/landing-page/.checkpoints/: v6-blur14.tsx  v6-blur36.tsx  v6-magazine-soft-bg.tsx  v6-onboarding-pre-branching.tsx  v6-pre-onboarding.tsx
apps/landing-page/docs/: design-tokens-pre-unify-2026-05-23.md  example-books.md
apps/landing-page/drizzle/: 0000_steady_norrin_radd.sql  0001_special_justice.sql
apps/landing-page/src/: middleware.ts
apps/reader/: CLAUDE.md  package.json
docs/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_ARCHIVE.md  MASTER.md  PROJECT_CONTEXT.md  STATUS.md
infra/: docker-compose.yml
tools/reddit_research/: .env.example  .gitignore  README.md  requirements.txt
tools/reddit_research/analysis/: curate_aspects.py  generate_absa_charts.py  generate_aspect_charts.py  generate_flair_charts.py  generate_sentiment_charts.py  generate_thread_charts.py  model_recommendations.md  render_findings_report.py  render_top_threads.py  validate_aspect_sentiment.py  (+1 more)
(+565 files in other folders)
